# Ziren

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  toolchain.md
audits/: HideakiTakahashi.md
crates/core/instruction-test-defs/: Cargo.toml
crates/core/instruction-test-defs/src/: cloclz.rs  div.rs  lib.rs  maddsub.rs  misc.rs  rotate.rs
crates/core/jit/: Cargo.toml
crates/core/jit/benches/: transpile_bench.rs
crates/core/jit/src/: context.rs  driver.rs  instructions.rs  isolation.rs  lib.rs  memory.rs  risc.rs  shm.rs
crates/core/jit/src/backends/: mod.rs
crates/core/jit/src/backends/x86/: instruction_impl.rs  mod.rs  transpiler.rs
crates/core/jit/tests/: smoke.rs
crates/cuda/: Cargo.toml
crates/cuda/src/: lib.rs
crates/poly/: Cargo.toml
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/src/: SHARD_LEVEL_README.md  basefold_chip_opened_values.rs  basefold_constraint_folder.rs  basefold_verifier.rs  basefold_witness.rs  challenger.rs  constraints.rs  domain.rs  fri.rs  hash.rs  jagged_circuit.rs  jagged_eval.rs  jagged_eval_primitives.rs  jagged_pcs_lift.rs  lib.rs  logup_gkr.rs  logup_proof.rs  merkle_tree.rs  partial_sumcheck.rs  per_chip_logup_gkr.rs  per_chip_zerocheck.rs  public_values_folder.rs  recursive_jagged_pcs.rs  recursive_stacked_pcs.rs  shard_basefold.rs  shard_level_witness.rs  shard_proof_variable_lift.rs  stark.rs  sumcheck.rs  symbolic.rs  types.rs  univariate.rs  utils.rs  whir_verifier.rs  zerocheck.rs
crates/recursion/circuit/src/dummy/: basefold_shard_proof.rs  mod.rs
crates/recursion/circuit/src/machine/: basefold_programs.rs  complete.rs  compress.rs  compress_basefold.rs  compress_basefold_recursion.rs  core.rs  core_basefold.rs  deferred.rs  deferred_basefold.rs  deferred_basefold_recursion.rs  mod.rs  root.rs  vkey_proof.rs  witness.rs  wrap.rs  wrap_basefold.rs
crates/recursion/circuit/src/witness/: mod.rs  outer.rs  stark.rs
crates/stark/: Cargo.toml
crates/stark/src/: basefold_late_binding.rs  bb31_poseidon2.rs  bench_pcs.rs  chip.rs  config.rs  debug.rs  folder.rs  global_cumulative_sum.rs  global_digest.rs  gpu_worker_context.rs  jagged.rs  jagged_branching_program.rs  jagged_eval_sumcheck.rs  jagged_pcs.rs  jagged_sumcheck.rs  jagged_whir.rs  jagged_whir_prover.rs  kb31_poseidon2.rs  lib.rs  logup_gkr.rs  lt_digest.rs  machine.rs  multilinear_config.rs  multilinear_prover.rs  multilinear_verifier.rs  opts.rs  permutation.rs  prove_whir_bench.rs  prover.rs  quotient.rs  record.rs  septic_curve.rs  septic_digest.rs  septic_extension.rs  stark_testing.rs  symbolic_builder.rs  types.rs  verifier.rs  whir_config.rs  word.rs  (+2 more)
crates/stark/src/air/: builder.rs  extension.rs  machine.rs  mod.rs  picus_info.rs  polynomial.rs  public_values.rs  public_values_air.rs  public_values_folder.rs  sub_builder.rs
crates/stark/src/basefold/: code.rs  config.rs  encoder.rs  fri.rs  mle.rs  mod.rs  padded.rs  proof.rs  prover.rs  stacked.rs  test.rs  verifier.rs
crates/stark/src/basefold/jagged_per_chip/: hadamard.rs  long.rs  mod.rs  poly.rs  protocol.rs  sumcheck.rs
crates/stark/src/lookup/: builder.rs  debug.rs  lookup.rs
crates/stark/src/shard_level/: README.md  basefold_constraint_folder.rs  device_first_layer_context.rs  device_trace_provider.rs  logup_gkr_prover.rs  main_trace_loader.rs  mod.rs  prover.rs  shard_proof.rs  sumcheck_poly.rs  types.rs  verifier.rs  zerocheck_poly.rs  zerocheck_prover.rs
crates/stark/src/shard_level/row_gkr/: build.rs  device_circuit.rs  extract.rs  first_layer.rs  layer.rs  mod.rs  round.rs  top_level.rs  transition.rs
crates/stark/src/shard_level/sp1_gkr/: build.rs  extract.rs  first_layer.rs  layer.rs  mod.rs  round.rs  top_level.rs  transition.rs
crates/stark/src/sp1_shapes/: enumerate.rs  mod.rs  types.rs
crates/stark/src/stacked_shapes/: enumerate.rs  mod.rs  types.rs
crates/stark/tests/: bench_jagged.rs
docs/: README.md  book.toml  d2_cutover_plan.md  d2_phased_plan.md  d2_phased_results_apr24.md  jagged_basefold_baseline.md  jit_design.md  jit_vs_interp_perf.md  meta_59_design.md  perf_results.md  perf_reth_gpu.md  phase2_gate3_analysis.md  recursion_verifier_port.md  sp1_shard_proof_port_status.md  task_22_plan.md  task_23_blocker.md
examples/: Cargo.toml
examples/aes128/host/src/: main.rs
examples/aggregation/host/src/: main.rs
examples/bitcoin/guest/: Cargo.toml
examples/bitcoin/guest/src/: main.rs
examples/bitcoin/host/: Cargo.toml
examples/bitcoin/host/src/: main.rs
examples/bn254/host/src/: main.rs
examples/cycle-tracking/host/src/: main.rs
examples/fibonacci/host/src/: main.rs
examples/fibonacci_c_lib/guest/: build.rs
examples/fibonacci_c_lib/guest/src/: main.rs
examples/fibonacci_c_lib/host/: build.rs
examples/fibonacci_c_lib/host/src/: main.rs
examples/fibonacci_c_lib/lib/: Makefile
examples/groth16/host/src/: main.rs
examples/keccak-precompile/guest/src/: main.rs
examples/keccak-precompile/host/: Cargo.toml
examples/keccak-precompile/host/src/: main.rs
examples/keeper/: README.md
examples/keeper/host/: Cargo.toml  build.rs
examples/keeper/host/payloadgen/: go.mod  go.sum  main.go
examples/keeper/host/src/: main.rs  payload.rs
examples/large-sum/host/src/: main.rs
examples/plonk/host/src/: main.rs
examples/poseidon2/host/src/: main.rs
examples/revme/guest/: Cargo.toml
examples/revme/guest/src/: main.rs
examples/revme/host/: Cargo.toml
examples/revme/host/src/: main.rs
examples/revme/program/src/: main.rs
examples/rsa/host/src/: main.rs
examples/sha2-go/guest/: go.mod  main.go
examples/sha2-go/host/: Cargo.toml
examples/sha2-go/host/src/: main.rs
examples/simple-go/guest/: go.mod  main.go
examples/simple-go/host/: build.rs
examples/simple-go/host/src/: main.rs
examples/ssz-withdrawals/guest/src/beacon/: utils.rs
examples/ssz-withdrawals/host/src/: main.rs
examples/tendermint/guest/: Cargo.toml
examples/tendermint/host/: Cargo.toml
examples/tendermint/host/src/: main.rs
examples/unconstrained/guest/src/: main.rs
examples/unconstrained/host/src/: main.rs
(+626 files in other folders)
