[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/zkMIPS/zkm2"
keywords = ["zkMIPS", "zkm", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
  "crates/prover",
  "crates/derive",
  "crates/recursion/compiler",
  "crates/recursion/core",
  "crates/recursion/derive",
]
resolver = "2"


[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true


[workspace.dependencies]
itertools = "0.13.0"
p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3" }
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }

p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
#p3-commit = { git = "https://github.com/Plonky3/Plonky3", features = ["test-utils"] }
p3-circle = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3" }
rand = "0.8.5"

zkm2-recursion-derive = { path = "crates/recursion/derive", version = "0.0.1", default-features = false }
zkm2-recursion-compiler = { path = "crates/recursion/compiler", version = "0.0.1" }
zkm2-recursion-core = { path = "crates/recursion/core", version = "0.0.1", default-features = false }
zkm2-derive = { path = "crates/derive", version = "0.0.1" }

# misc
hashbrown = "0.14.5"
