[workspace]
members = [
    "guest",
    "host",
]
resolver = "2"
default-members = ["host"]


[workspace.dependencies]
zkm-sdk = { path = "../../crates/sdk" }
zkm-build = { path = "../../crates/build" }
zkm-zkvm = { path = "../../crates/zkvm/entrypoint" }

clap = { version = "4.0", features = ["derive", "env"] }