[package]
name = "zkm-stark"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-air = { workspace = true  }
p3-field = { workspace = true  }
p3-challenger = { workspace = true  }
p3-commit = { workspace = true  }
p3-dft = { workspace = true  }
p3-matrix = { workspace = true  }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-util = { workspace = true  }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
serde = { workspace = true }
p3-fri = { workspace = true  }
p3-uni-stark = { workspace = true }

p3-koala-bear  = { workspace = true  }
p3-circle = { workspace = true  }
p3-keccak = { workspace = true  }
p3-mds = { workspace = true  }
p3-merkle-tree = { workspace = true  }
p3-mersenne-31 = { workspace = true  }
p3-poseidon2 = { workspace = true  }
p3-symmetric = { workspace = true  }
rand = { workspace = true }
p3-multilinear-util = { workspace = true, optional = true }
rmp-serde = { version = "1.3", optional = true }

zkm-derive = { workspace = true }
zkm-primitives = { workspace = true }
zkm-zkvm = { workspace = true }

strum = "0.26.3"
strum_macros = "0.26.4"
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
arrayref = "0.3.8"
num-bigint = { version = "0.4.3", default-features = false }
rayon-scan = "0.1.1"

num-traits = "0.2.19"
sysinfo = "0.30.13"

[features]
default = ["shard-level-proof"]
basefold = ["p3-multilinear-util", "rmp-serde"]
# SP1-style shard-level proof shape (one LogUp-GKR + one zerocheck
# per shard, vs Ziren's legacy per-chip).  Default-on as of task
# #21 — the shard-level pipeline at `crate::shard_level` is now
# structurally complete end-to-end (see task #23 smoke test).
# Legacy per-chip provers remain available when this feature is
# disabled; their removal lives under task #13.
shard-level-proof = ["basefold"]

[dev-dependencies]